@@ -1,3 +1,8 @@
+2001-06-16  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/show.c: implemented show for historysize, multiplot and
+	termoptions.
+
 2001-06-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	I went on a little crusade against magic numbers in the source
